--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
     entrypoint: ["./build_provider_snapshot.sh"]
     volumes:
       - ./:/terraform-provider-aws
-      - terraform_local_plugins:/root/.terraform.d/plugins
+      - terraform_local_plugins:/root/.terraform.local/plugins
       - go_build_cache_dir:/root/.cache
